Add CMAKE_EXPORT_COMPILE_COMMANDS for IntelliSense Make CUDA optional

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CUDA_SOURCES # cmake-format: sort
                  tensor.cu)
 list(APPEND SOURCES ${CUDA_SOURCES})
 
-find_package(CUDA REQUIRED)
+find_package(CUDA)
 
 add_library(cascade_static STATIC ${SOURCES})
 set_target_properties(cascade_static PROPERTIES OUTPUT_NAME cascade_static)
@@ -21,7 +21,10 @@ target_include_directories(
   cascade_static
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/functions
          ${CUDA_INCLUDE_DIRS})
-target_compile_definitions(cascade_static PRIVATE CUDA_ENABLED)
+if(CUDA_FOUND)
+  target_compile_definitions(cascade_static
+                             PRIVATE CUDA_ENABLED CMAKE_EXPORT_COMPILE_COMMANDS)
+endif()
 
 if(BUILD_SHARED)
   add_library(cascade_shared SHARED ${SOURCES})
@@ -30,7 +33,10 @@ if(BUILD_SHARED)
     cascade_shared
     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/functions
            ${CUDA_INCLUDE_DIRS})
-  target_compile_definitions(cascade_shared PRIVATE CUDA_ENABLED)
+  if(CUDA_FOUND)
+    target_compile_definitions(
+      cascade_shared PRIVATE CUDA_ENABLED CMAKE_EXPORT_COMPILE_COMMANDS)
+  endif()
 endif()
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux"
@@ -43,7 +49,10 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux"
     cascade_with_coverage
     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/functions
            ${CUDA_INCLUDE_DIRS})
-  target_compile_definitions(cascade_with_coverage PRIVATE CUDA_ENABLED)
+  if(CUDA_FOUND)
+    target_compile_definitions(
+      cascade_with_coverage PRIVATE CUDA_ENABLED CMAKE_EXPORT_COMPILE_COMMANDS)
+  endif()
   target_compile_options(cascade_with_coverage PRIVATE -fprofile-arcs
                                                        -ftest-coverage)
 endif()
