Make GPU support optional for systems with CUDA too

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,9 +15,13 @@ list(APPEND SOURCES ${CUDA_SOURCES})
 
 find_package(CUDA)
 
-if(CUDA_FOUND)
-  set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
+if(CUDA_FOUND AND ENABLE_CUDA)
+  set(CUDA_ENABLED 1)
+else()
+  set(CUDA_ENABLED 0)
 endif()
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
 
 add_library(cascade_static STATIC ${SOURCES})
 set_target_properties(cascade_static PROPERTIES OUTPUT_NAME cascade_static)
@@ -25,9 +29,7 @@ target_include_directories(
   cascade_static
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/functions
          ${CUDA_INCLUDE_DIRS})
-if(CUDA_FOUND)
-  target_compile_definitions(cascade_static PRIVATE CUDA_ENABLED)
-endif()
+target_compile_definitions(cascade_static PRIVATE CUDA_ENABLED=${CUDA_ENABLED})
 
 if(BUILD_SHARED)
   add_library(cascade_shared SHARED ${SOURCES})
@@ -36,9 +38,8 @@ if(BUILD_SHARED)
     cascade_shared
     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/functions
            ${CUDA_INCLUDE_DIRS})
-  if(CUDA_FOUND)
-    target_compile_definitions(cascade_shared PRIVATE CUDA_ENABLED)
-  endif()
+  target_compile_definitions(cascade_shared
+                             PRIVATE CUDA_ENABLED=${CUDA_ENABLED})
 endif()
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux"
@@ -51,9 +52,8 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux"
     cascade_with_coverage
     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/functions
            ${CUDA_INCLUDE_DIRS})
-  if(CUDA_FOUND)
-    target_compile_definitions(cascade_with_coverage PRIVATE CUDA_ENABLED)
-  endif()
+  target_compile_definitions(cascade_with_coverage
+                             PRIVATE CUDA_ENABLED=${CUDA_ENABLED})
   target_compile_options(cascade_with_coverage PRIVATE -fprofile-arcs
                                                        -ftest-coverage)
 endif()
