Add deviceData, update CMakeLists to properly pass flags to headers

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,7 @@ target_include_directories(
   cascade_static
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/functions
          $<$<BOOL:${CUDA_ENABLED}>:${CUDA_INCLUDE_DIRS}>)
-target_compile_definitions(cascade_static PRIVATE CUDA_ENABLED=${CUDA_ENABLED})
+target_compile_definitions(cascade_static PUBLIC CUDA_ENABLED=${CUDA_ENABLED})
 
 if(BUILD_SHARED)
   add_library(cascade_shared SHARED ${SOURCES})
@@ -28,8 +28,7 @@ if(BUILD_SHARED)
     cascade_shared
     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/functions
            $<$<BOOL:${CUDA_ENABLED}>:${CUDA_INCLUDE_DIRS}>)
-  target_compile_definitions(cascade_shared
-                             PRIVATE CUDA_ENABLED=${CUDA_ENABLED})
+  target_compile_definitions(cascade_shared PUBLIC CUDA_ENABLED=${CUDA_ENABLED})
 endif()
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux"
@@ -43,7 +42,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux"
     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/functions
            $<$<BOOL:${CUDA_ENABLED}>:${CUDA_INCLUDE_DIRS}>)
   target_compile_definitions(cascade_with_coverage
-                             PRIVATE CUDA_ENABLED=${CUDA_ENABLED})
+                             PUBLIC CUDA_ENABLED=${CUDA_ENABLED})
   target_compile_options(cascade_with_coverage PRIVATE -fprofile-arcs
                                                        -ftest-coverage)
 endif()
