--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
 
-option(BUILD_SHARED "Build as shared library" ON)
+option(BUILD_SHARED "Build shared library" ON)
 option(CODE_COVERAGE "Build with code coverage flags, for GCC" OFF)
 option(ENABLE_CUDA "Enable GPU support, if available" ON)
 
