Fix code coverage

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,20 +24,24 @@ if(BUILD_SHARED)
   set_target_properties(cascade_shared PROPERTIES OUTPUT_NAME cascade_shared)
   set_target_properties(cascade_shared PROPERTIES PUBLIC_HEADER
                                                   "${PUBLIC_HEADERS}")
-  target_include_directories(cascade_shared PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+  target_include_directories(
+    cascade_shared PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${TENSOR_INCLUDE_DIRS}
+                          ${VAR_INCLUDE_DIRS})
 endif()
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux"
    AND CMAKE_CXX_COMPILER_ID STREQUAL "GNU"
    AND CODE_COVERAGE)
-  add_library(cascade_with_coverage STATIC $<TARGET_OBJECTS:tensor_object>
-                                           $<TARGET_OBJECTS:var_object>)
+  add_library(
+    cascade_with_coverage STATIC $<TARGET_OBJECTS:tensor_object_with_coverage>
+                                 $<TARGET_OBJECTS:var_object_with_coverage>)
   set_target_properties(cascade_with_coverage PROPERTIES OUTPUT_NAME
                                                          cascade_with_coverage)
   set_target_properties(cascade_with_coverage PROPERTIES PUBLIC_HEADER
                                                          "${PUBLIC_HEADERS}")
-  target_include_directories(cascade_with_coverage
-                             PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+  target_include_directories(
+    cascade_with_coverage PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
+                                 ${TENSOR_INCLUDE_DIRS} ${VAR_INCLUDE_DIRS})
   target_compile_options(cascade_with_coverage PRIVATE -fprofile-arcs
                                                        -ftest-coverage)
 endif()
