--- a/src/tensor/CMakeLists.txt
+++ b/src/tensor/CMakeLists.txt
@@ -28,5 +28,15 @@ target_compile_definitions(tensor_object PUBLIC CUDA_ENABLED=${CUDA_ENABLED})
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux"
    AND CMAKE_CXX_COMPILER_ID STREQUAL "GNU"
    AND CODE_COVERAGE)
-  target_compile_options(tensor_object PRIVATE -fprofile-arcs -ftest-coverage)
+  add_library(tensor_object_with_coverage OBJECT ${SOURCES})
+  set_target_properties(tensor_object_with_coverage
+                        PROPERTIES POSITION_INDEPENDENT_CODE ON)
+  target_include_directories(
+    tensor_object_with_coverage
+    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
+           $<$<BOOL:${CUDA_ENABLED}>:${CUDA_INCLUDE_DIRS}>)
+  target_compile_definitions(tensor_object_with_coverage
+                             PUBLIC CUDA_ENABLED=${CUDA_ENABLED})
+  target_compile_options(tensor_object_with_coverage PRIVATE -fprofile-arcs
+                                                             -ftest-coverage)
 endif()
