--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,7 @@ set_target_properties(cascade_static PROPERTIES PUBLIC_HEADER
 target_include_directories(
   cascade_static PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${TENSOR_INCLUDE_DIRS}
                         ${VAR_INCLUDE_DIRS})
+target_compile_definitions(cascade_static PUBLIC CUDA_ENABLED=${CUDA_ENABLED})
 
 if(BUILD_SHARED)
   add_library(cascade_shared SHARED $<TARGET_OBJECTS:tensor_object>
@@ -27,6 +28,7 @@ if(BUILD_SHARED)
   target_include_directories(
     cascade_shared PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${TENSOR_INCLUDE_DIRS}
                           ${VAR_INCLUDE_DIRS})
+  target_compile_definitions(cascade_shared PUBLIC CUDA_ENABLED=${CUDA_ENABLED})
 endif()
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux"
@@ -42,6 +44,8 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux"
   target_include_directories(
     cascade_with_coverage PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
                                  ${TENSOR_INCLUDE_DIRS} ${VAR_INCLUDE_DIRS})
+  target_compile_definitions(cascade_with_coverage
+                             PUBLIC CUDA_ENABLED=${CUDA_ENABLED})
   target_compile_options(cascade_with_coverage PRIVATE -fprofile-arcs
                                                        -ftest-coverage)
 endif()
